# yamesher

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  Install.Md  Lop_triangulation_2.cpp  Lop_triangulation_2.h  Lop_triangulation_2_test.cpp  Lop_triangulation_2_test.h  Makefile  README  README.md  RUNNING  cgal_types.h  config.h.in  configure  configure.ac  copyright.txt  debugging.h  gSTLFilt.pl  geometry.h  inherit.dot  lookups.cpp  lookups.h  lookups_test.cpp  lookups_test.h  math.h  myFlexLexer.cpp  myFlexLexer.h  notes  oldmakefile  readinput.lpp  readinput.ypp  rootfind.h  segment_base.cpp  segment_base.h  test.sh  types.h  usermakefile  utility.cpp  (+5 more)
INPUT/: badcusp.fig  ballrec.fig  bezspiral.fig  crazy.fig  crazy_imr.fig  cubtest.fig  dropsy.fig  foil.fig  foil0.fig  foil2.fig  helloworld.fig  likegooch.fig  spokecut.fig  testspline.fig  whatever.fig
autoconf/: ax_lib_cgal_core.m4
figures/: as_input.ps  curvature_bounded.ps  finished_groom.ps  input_conforming.ps  quality_insured.ps
